# neohuxley-client

./: .gitignore  Dockerfile  README.md  main.py  nhxclient.config  nhxclient.sh  script_aliases  tsclient.cid
certs/: tls_neohuxley.cert
config/: nhxclient.sh
config/container/: dante.conf
config/host/: dnsmasq.neohuxley.conf  redsocks.conf  resolved_stuff
db/: database.py
routes/: actor.py  inbox.py  outbox.py  webfinger.py
scripts/: chatter.sh  cli.sh  exec.sh  kill.sh  launch.sh  setup_routing.sh
src/activitypub_chatter/: Cargo.toml
src/activitypub_chatter/src/: main.rs
src/activitypub_serv/: main.py  requirements.txt
src/activitypub_serv/db/: create_user  database.py  delete_user
src/activitypub_serv/events/: event_router.py
src/activitypub_serv/routes/: actor.py  chatter.py  inbox.py  outbox.py  webfinger.py
src/activitypub_serv/utils/: create_note_activity.py  signatures.py  signed_request.py
src/activitypub_serv/workers/: outbox_worker.py
src/container/: dante.conf  entrypoint.sh  launch_activitypub.sh  launch_tailscale.sh  setup_firewall_routing.sh
src/tailscale_container/: container_firewall.sh  tailscale_entrypoint.sh
utils/: config.py  keys.py
