[package]
name = "activitypub_chatter"
version = "0.1.0"
edition = "2024"


[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket support
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# Futures for stream processing
futures = "0.3"

# URL parsing
url = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# TUI rendering
tui = "0.19"

# Terminal input/output handling
crossterm = "0.27"

# JSON parsing
serde_json = "1.0"
